--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ remote_theme             : mmistakes/minimal-mistakes
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "SpiritOfDeath"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Huny"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://SpiritofDeath.github.io"
 baseurl                  : # the subpath of your site, e.g. ""
