--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Huny"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : ""
   location         : "Somewhere"
   email            :
   links:
