--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ locale                   : "en-US"
 title                    : "SpiritOfDeath"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Huny"
+name                     : "Lucifer.Morning.Star"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://SpiritofDeath.github.io"
 baseurl                  : # the subpath of your site, e.g. ""
