--- a/_config.yml
+++ b/_config.yml
@@ -292,5 +292,5 @@ defaults:
       author_profile: true
       read_time: true
       comments:  true
-      share: #true
+      share: true
       related: true
