--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 
 .idea
-SpiritofDeath.github.io.iml
-
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+*.iml
